--- a/ui/index.html
+++ b/ui/index.html
@@ -1,10 +1,20 @@
 <!doctype html>
 <html>
 	<head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>
 			RWiki: A Personal Wiki built using Golang
 		</title>
+        <link rel=stylesheet href="css/bootstrap.min.css">
 	</head>
 	<body>
+        <div class="container">
+            The main container
+            <div class="row">
+                <div class="col-md-4">Content</div>
+                <div class="col-md-4">Links</div>
+            </div>
+        </div>
+        
 	</body>
 </html>
