Add more Bootstrap goodies

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,12 +9,23 @@
 	</head>
 	<body>
         <div class="container">
+            <h1>A Personal Wiki built using Golang
+                <small>A learning project</small>
+            </h1>
             The main container
             <div class="row">
-                <div class="col-md-4">Content</div>
-                <div class="col-md-4">Links</div>
+                <div class="row-md-4">
+                    <button type="button" class="btn btn-primary">
+                        Content
+                    </button>
+                </div>
+                <div class="row-md-4">
+                    <button type="button" class="btn btn-success">
+                            Links
+                        </button>
+                </div>
             </div>
         </div>
-        
+        <script src="js/bootstrap.min.js"></script>
 	</body>
 </html>
