--- a/ui/index.html
+++ b/ui/index.html
@@ -14,12 +14,12 @@
             </h1>
             The main container
             <div class="row">
-                <div class="row-md-4">
+                <div class="col-md-8">
                     <button type="button" class="btn btn-primary">
                         Content
                     </button>
                 </div>
-                <div class="row-md-4">
+                <div class="col-md-8">
                     <button type="button" class="btn btn-success">
                             Links
                         </button>
