Add buttons in single line

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,15 +12,29 @@
             <h1>A Personal Wiki built using Golang
                 <small>A learning project</small>
             </h1>
-            The main container
             <div class="row">
                 <div class="col-md-8">
+                    <hr />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-2">
                     <button type="button" class="btn btn-primary">
-                        Content
+                        Most Popular
                     </button>
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-1">
                     <button type="button" class="btn btn-success">
+                            Edit
+                        </button>
+                </div>
+                <div class="col-md-1">
+                    <button type="button" class="btn btn-warning">
+                            Save
+                        </button>
+                </div>
+                <div class="col-md-2">
+                    <button type="button" class="btn btn-info">
                             Links
                         </button>
                 </div>
