Add add-page, change button colors

--- a/ui/index.html
+++ b/ui/index.html
@@ -18,13 +18,13 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-2">
-                    <button type="button" class="btn btn-primary">
-                        Most Popular
+                <div class="col-md-1">
+                    <button type="button" class="btn btn-warning">
+                        Add Page
                     </button>
                 </div>
                 <div class="col-md-1">
-                    <button type="button" class="btn btn-success">
+                    <button type="button" class="btn btn-warning">
                             Edit
                         </button>
                 </div>
@@ -33,11 +33,17 @@
                             Save
                         </button>
                 </div>
-                <div class="col-md-2">
-                    <button type="button" class="btn btn-info">
+                <div class="col-md-1">
+                    <button type="button" class="btn btn-warning">
                             Links
                         </button>
                 </div>
+                <div class="col-md-1">
+                    <button type="button" class="btn btn-warning">
+                            Most Popular
+                        </button>
+                </div>
+                
             </div>
         </div>
         <script src="js/bootstrap.min.js"></script>
